plugins {
    id 'org.graalvm.buildtools.native' version '0.10.1'
}

apply plugin: 'java'
apply plugin: 'application'

group = 'com.raisin'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

ext {
    assertj = '3.25.3'
    junit = '5.10.2'
    logBack = '1.5.6'
    webFlux = '6.2.0'
    jackson = '2.17.1'
    jaxb = '4.0.5'
    guava = '33.2.0-jre'
}

dependencies {
    implementation(
            "ch.qos.logback:logback-classic:${logBack}",
            "org.springframework:spring-webflux:${webFlux}",
            "com.fasterxml.jackson.dataformat:jackson-dataformat-xml:$jackson",
            "com.fasterxml.jackson.datatype:jackson-datatype-jdk8:$jackson",
            "com.fasterxml.jackson.module:jackson-module-parameter-names:$jackson",
            "com.google.guava:guava:$guava"
    )

    testImplementation platform("org.junit:junit-bom:${junit}")
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation("org.assertj:assertj-core:${assertj}")
}

test {
    useJUnitPlatform()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

application {
    mainClassName = "com.raisin.Application"
    applicationDefaultJvmArgs = [
            "-Dfile.encoding=UTF-8",
            "-Duser.timezone=UTC",
            "-XX:+UseZGC",
            "-XX:MaxRAMPercentage=75.0",
            "-XX:+ExitOnOutOfMemoryError"
    ]
}

run {
}

graalvmNative {
    binaries.all {
        resources.autodetect()
    }
}